--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@ body{
 
 .header{
   width: 100%;
-    background-image: url(images/5129974_20043.jpg) ;
+    background-image: url(./images/5129974_20043.jpg) ;
     background-repeat: no-repeat;
     background-size:cover ;
     padding-top: 20px;
