--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,8 @@ body{
     background-image: url(../images/5129974_20043.jpg) ;
     background-repeat: no-repeat;
     background-size:cover ;
+    background-position: center;
+    
     padding-top: 20px;
     padding-bottom: 20px;
     height: 30px;
@@ -134,6 +136,8 @@ body{
    background-image: url(../images/medical-and-healthcare-in-blue-color_1017-26807.avif);
     background-repeat: no-repeat;
     background-size:cover ;
+    background-position: center;
+   
     padding-top: 20px;
     padding-bottom: 20px;
 }
@@ -154,9 +158,13 @@ body{
     margin-bottom: 35px;
 }
 .map{
-    width: 300px;
-    height: 300px;
+    border-radius: 20px;
+    padding-bottom: 30px;
+   
 }
+[class*="copyrights-pane"] {
+    display: none !important;
+  }
 .footer{
     width: 100%;
     height: 50px;
