--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,7 +71,13 @@ body{
     transition: all .2s ease-out;
     box-shadow: 0 4px 6px rgba(255, 215, 0, .2) ;
     font-size: 18px;
+   
 }
+.button_div{
+    margin: 60px;
+}
+
+
 .button:hover {
     transform: scale(1.03);
     box-shadow: 0 9px 9px rgba(255, 215, 0, .5);
