--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,11 +42,12 @@ body{
     padding: 10px;
     
     opacity: 0.8;
-    transition: all .07s ease-in-out;
+    transition: all 0.9s ease-in-out;
     font-size: 20px;
 }
 .header_nav_li a:hover{
     opacity: 1;
+   
 }
 
 .header_nav{
@@ -143,12 +144,12 @@ body{
 .certificates_container{
     width: 100%;
     padding: 0;
-    background-color: rgb(162, 244, 244);
+    background-color: rgb(205, 232, 232);
 }
 .certificates_container_main{
-     
-        padding-top:50px ;
-        padding-bottom:50px ;
+      position: relative;
+        padding-top:40px ;
+        padding-bottom:100px ;
         margin-left: 12%;
         margin-right: 12%;
 
@@ -157,13 +158,58 @@ body{
             font-size: 22px;
             margin: 0;
             text-align: center;
+            padding-top: 30px;
             margin-bottom: 40px;
 }
 .certificates_container_main_content{
+       background-color: darkgray ;
+        position: relative;
        display: flex;
+       justify-content: space-evenly;
+       flex-wrap: wrap;
+       max-height:150px ;
+       overflow: hidden;
       
         padding: 20px;
-        border: 5px solid silver;
+         padding-top: 50px;
+        
+        border: 4px solid silver;
+        border-radius: 0px 15px  0px 15px ;
+        transition: all 1.5s ease-in-out;
+}
+.certificates_container_main_content::-webkit-scrollbar{
+  width: 0;
+}
+
+.show-certif{
+  margin-left: 50px;
+  
+  padding: 10px;
+  margin-bottom: 20px;
+  
+  
+  
+  
+}
+.sticky{
+  
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-left: 50px;
+    top: 10px;
+    z-index: 1;
+    display: none;
+    position: sticky;
+    
+    
+    
+
+
+}
+.certif img{
+  margin: 15px;
+ 
+  
 }
 
 #myImg {
@@ -286,14 +332,6 @@ body{
     
     
 }
-
-
-.content_consultation_h3{
-    text-align: center;
-    font-size: 22px;
-    padding-top: 30px;
-    margin-bottom: 55px;
-}
 .name_specialization{
     text-align: center;
     padding-top: 30px;
@@ -305,6 +343,14 @@ body{
     margin-bottom: 50px;
 
 }
+/*////////////////////////////////////Консультации/////////////////////////////////////////////////*/
+.content_consultation_h3{
+    text-align: center;
+    font-size: 22px;
+    padding-top: 30px;
+    margin-bottom: 55px;
+}
+
 .content_consultation{
     width: 100%;
    background-image: url(../images/8866036_25909.jpg);
@@ -349,18 +395,58 @@ body{
 .consultation_item{
    text-align: center;
    width: 500px;
+  }
+.consultation_item ul li{
+  list-style-type: none;
    
 }
 [class*="copyrights-pane"] {
     display: none !important;
   }
 
+  .btn {
+    border: none;
+    cursor: pointer;
+    
+    outline: none;
+    overflow: hidden;
+    position: relative;
+    color: #fff;
+    font-weight: 700;
+    font-size: 17px;
+    background-color: #222;
+    padding: 17px 50px;
+    margin: 0 auto;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.20);
+  }
+  .btn span {
+    position: relative; 
+    z-index: 1;
+    color: white;
+    text-decoration: none;
+  }
+  .btn:after {
+    content: "";
+    position: absolute;
+    left: 20px;
+    top: 0px;
+    height: 800%;
+    width: 170%;
+    background: #78c7d2;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
+    transform: translateX(-98%) translateY(-25%) rotate(45deg);
+  }
+  .btn:hover:after {
+    -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
+    transform: translateX(-9%) translateY(-25%) rotate(45deg);
+  }
 
 
 
 
-@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
-
+/*@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
 body {
   margin: 0;
   height: 100%;
@@ -437,6 +523,16 @@ body {
   color: #000;
   font-size: 25px; 
 }
+
+
+
+
+
+
+
+
+
+*/
 
 
 
