--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,10 +11,13 @@ body{
     background-repeat: no-repeat;
     background-size:cover ;
     background-position: center;
-    
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    z-index: 999;
     padding-top: 20px;
     padding-bottom: 20px;
-    height: 40px;
+    height: 35px;
     border-bottom: 2px solid silver;
     border-top: 2px solid silver;
    
@@ -24,8 +27,8 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .header_nav_lu {
     list-style-type: none;
@@ -34,8 +37,10 @@ body{
 }
 .header_nav_li{
     display: inline-block;
+
 }
 .header_nav_li a{
+    margin-left: 20px;
     display: inline-block;
     text-decoration: none;
     color: black;
@@ -47,6 +52,7 @@ body{
 }
 .header_nav_li a:hover{
     opacity: 1;
+    
    
 }
 
@@ -61,35 +67,20 @@ body{
     font-size: 24px;
     text-decoration: none;
 }
-.button{
-    background-color: gold;
-    padding: 10px;
-    border-radius: 100px;
-    text-decoration: none;
-    border: 1px solid gray;
-    color:black ;
-    transition: all .2s ease-out;
-    box-shadow: 0 4px 6px rgba(255, 215, 0, .2) ;
-    font-size: 18px;
-   
-}
+
 .button_div{
     margin: 60px;
 }
 
 
-.button:hover {
-    transform: scale(1.03);
-    box-shadow: 0 9px 9px rgba(255, 215, 0, .5);
-    
-    
-}
+
 .content{
     width: 100%;
     background-image: url(../images/paper-style-white-monochrome-background_52683-66443.png);
     background-repeat: no-repeat;
     background-size:cover ;
     background-position: center;
+    margin-top: 60px;
     padding-top: 20px;
     padding-bottom: 20px;
     border-bottom: 2px solid silver;
@@ -171,7 +162,7 @@ body{
        overflow: hidden;
       
         padding: 20px;
-         padding-top: 50px;
+         padding-top: 20px;
         
         border: 4px solid silver;
         border-radius: 0px 15px  0px 15px ;
@@ -182,35 +173,86 @@ body{
 }
 
 .show-certif{
+  color: #fff;
+  background-color: #5ca1e1;
+  position: relative;
+  border: none;
+  border-radius: 1px;
   margin-left: 50px;
-  
+  cursor: pointer;
   padding: 10px;
+  font-size: 14px;
   margin-bottom: 20px;
-  
+  transition: all 0.5s;
   
   
   
 }
 .sticky{
-  
+  cursor: pointer;
   padding: 10px;
   margin-bottom: 20px;
   margin-left: 50px;
-    top: 10px;
+  border: none;
+  border-radius: 1px;
+  color: #fff;
+  background-color: #5ca1e1;
+  transition: all 0.5s;
+  font-size: 14px;
+    top: 90px;
     z-index: 1;
     display: none;
-    position: sticky;
-    
-    
-    
-
-
+    position: sticky;   
 }
 .certif img{
   margin: 15px;
  
-  
 }
+
+.button:after {
+  content: '»';
+  position: absolute;
+  opacity: 0;  
+  top: 5px;
+  font-size: 24px;
+  right: -20px;
+  transition: 0.5s;
+  transform: rotate(90deg)
+}
+.button:hover{
+  padding-right: 34px;
+  padding-left:8px;
+}
+
+.button:hover:after {
+  opacity: 1;
+  right: 10px;
+}
+.button-up:after {
+  content: '»';
+  position: absolute;
+  opacity: 0; 
+  font-size: 24px; 
+  top: 5px;
+  right: -20px;
+  transition: 0.5s;
+  transform: rotate(-90deg)
+}
+.button-up:hover{
+  padding-right: 34px;
+  padding-left:8px;
+}
+
+.button-up:hover:after {
+  opacity: 1;
+  right: 10px;
+}
+
+
+
+
+
+
 
 #myImg {
     border-radius: 5px;
@@ -543,5 +585,5 @@ body {
   .footer{
     width: 100%;
     height: 50px;
-    background: black;
+    background: rgb(74, 21, 148);
 }
